@@ -3,8 +3,10 @@
 
 #ifdef _WIN32
 #include <winsock2.h>
+int inet_aton(const char *cp, struct in_addr *ia);
 #else
 #include <sys/select.h>
+#include <arpa/inet.h>
 #endif
 
 void slirp_init(void);
@@ -19,5 +21,10 @@ void slirp_input(const uint8_t *pkt, int pkt_len);
 /* you must provide the following functions: */
 int slirp_can_output(void);
 void slirp_output(const uint8_t *pkt, int pkt_len);
+
+int slirp_redir(int is_udp, int host_port, 
+                struct in_addr guest_addr, int guest_port);
+
+extern const char *tftp_prefix;
 
 #endif
